gaucd/guacd-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: guacd
  name: guacd
  namespace: homeautomation
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: guacd
    spec:
      containers:
      - image: linuxserver/guacd
        name: guacd
        resources:
          requests:
            cpu: 1
        ports:
        - containerPort: 4822
      restartPolicy: Always
status: {}
