gaucd/guacd-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: guacd
  name: guacd
  namespace: homeautomation
spec:
  ports:
  - name: "4822"
    port: 4822
    targetPort: 4822
  selector:
    io.kompose.service: guacd
status:
  loadBalancer: {}
